@@ -1,4 +1,5 @@
 Changes in BitBake 1.8.x:
+	- Fix -f (force) in conjunction with -b
 	- Fix exit code for build failures in --continue mode
 	- Fix git branch tags fetching
 	- Change parseConfigurationFile so it works on real data, not a copy
@@ -21,6 +22,10 @@ Changes in BitBake 1.8.x:
 	  the way bitbake schedules tasks
 	- Add BB_STAMP_POLICY variable/option ("perfile" or "full") controlling
 	  how extensively stamps are looked at for validity
+	- When handling build target failures make sure idepends are checked and
+	  failed where needed. Fixes --continue mode crashes.
+	- Fix problems with recrdeptask handling where some idepends weren't handled
+	  correctly.
 
 Changes in BitBake 1.8.10:
 	- Psyco is available only for x86 - do not use it on other architectures.
